# Almost-ARCADIA

./: .gitignore  README.md  REVIEW_NOTES.md  SOURCE_SNAPSHOT.md  VALIDATION.md  config.json  contracts.py  default_config.json  manage.py  next-draft-audit-report.md  pyproject.toml  tests_contracts.py
.github/workflows/: ci.yml
arcadia/config/: __init__.py  models.py  storage.py
arcadia/contracts/: __init__.py
arcadia/inference/: __init__.py  segmentation.py
arcadia/process/: __init__.py  launcher.py  models.py
arcadia/runtimes/: __init__.py  llama_cpp.py  sam.py  sam_server.py
arcadia/tests/: conftest.py  test_config_storage.py  test_contracts.py  test_llama_cpp_runtime.py  test_process_launcher.py  test_sam_runtime.py  test_sam_server.py  test_segmentation_client.py
core/: analysis.py  config.py  errors.py  networking.py  storage.py
core/inference/: __init__.py  llm_client.py  results.py  sam_client.py
core/pipeline/: __init__.py  priority_map_adapter.py
core/services/: __init__.py  controller.py  host_listener.py  instruction_client.py  instruction_server.py  llm_runtime.py  llm_settings.py  sam_checkpoint.py  sam_runtime.py  specs.py
core_orchestrator/: apps.py  urls.py  views.py
core_orchestrator/services/: __init__.py  command_builder.py  inference_service.py  llm_client.py  sam_runtime.py  service_manager.py  settings_store.py
core_orchestrator/templates/core_orchestrator/: base.html  client_run_workspace.html  heatmap_dashboard.html  host_portal.html  index.html  reconstruction_ply_viewer.html  tool_selection.html
core_orchestrator/templates/core_orchestrator/partials/: heatmap_panel.html  heatmap_panel_script.html
core_orchestrator/tests/: __init__.py  test_heatmap_stream.py  test_helpers.py  test_host_listener.py  test_llm_client.py  test_process_manager.py  test_remote_client.py  test_routing.py  test_service_manager.py  test_settings_store.py
core_orchestrator/utils/model_host/: __init__.py  llama_server_helper.py  process_manager.py  remote_client_helper.py  sam3_server_helper.py  vpn_tunnel_helper.py
core_orchestrator/views/: __init__.py  pages.py  settings_api.py
drone_orchestrator/: asgi.py  settings.py  urls.py  wsgi.py
project/: settings.py
scripts/: install_macos_metal.sh  install_windows_cuda.ps1  llama_cpp_commit.txt
tests/: test_analysis.py  test_artifacts.py  test_config.py  test_forms.py  test_graph_agent.py  test_host_listener.py  test_instruction_client.py  test_instruction_server.py  test_llm_client.py  test_llm_runtime.py  test_llm_settings.py  test_priority_map_adapter.py  test_runtime.py  test_sam_api.py  test_sam_checkpoint.py  test_sam_client.py  test_sam_runtime.py  test_service_controller.py  test_service_forms.py  test_service_spec.py  test_service_specs.py  test_storage.py  test_uploads.py  test_web.py  test_web_views.py
web/: apps.py  artifacts.py  forms.py  models.py  runtime.py  tools.py  uploads.py  urls.py  views.py
web/static/web/: app.css  app.js
web/templates/web/: analysis.html  base.html  client.html  endpoint_test.html  home.html  nodes.html  results.html  services.html
web/templates/web/partials/: llm_form.html
